# sample-building-mcp-servers-with-python

./: .amazon-q-example.json  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: calculator_example.py  postgresql_example.py  rds_example.py  s3_example.py
src/: calculator_server.py  postgresql_server.py  rds_server.py  s3_server.py
