[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-sample"
version = "0.1.0"
description = "Sample MCP servers built with Python and FastMCP"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT-0"}
authors = [
    {name = "Amazon Web Services", email = "aws@amazon.com"}
]
dependencies = [
    "fastmcp>=0.4.0",
    "boto3>=1.28.0",
    "asyncpg>=0.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
